testing/Travis/testcases/TypeChecker/shouldFail/FullRelationTypeMismatch.adl
CONTEXT FullRelationTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT FullRelationTypeMismatchCheck
{+ Test that full relation fails when signature doesn't match expected type.
   This verifies the type checker correctly rejects V[A*C] when [A*A] is expected. +}

RELATION result[A*A]

RULE testFullFail: result = V[A*C]

ENDCONTEXT
